--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "colorf0x",
-	"version": "1.35",
+	"version": "1.4",
 
 	"description": "Match the theme-color of the website with Firefox's UI",
 	"homepage_url": "https://github.com/Arecsu/colorf0x/",
@@ -19,7 +19,7 @@
 	"permissions": ["activeTab", "tabs", "theme", "browserSettings", "management"],
 
 	"background": {
-		"scripts": ["background.js", "tinycolor.js"],
+		"scripts": ["background.js", "chroma.min.js"],
 		"type": "module",
 		"persistent": true
 	},
